--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.protobuf'
 
 
 android {
@@ -47,6 +48,11 @@ android {
             signingConfig signingConfigs.development_config
             zipAlignEnabled true
         }
+        lintOptions {
+            disable 'GoogleAppIndexingWarning', 'HardcodedText', 'InvalidPackage'
+            textReport true
+            textOutput "stdout"
+        }
     }
 
     applicationVariants.all { variant ->
@@ -62,18 +68,44 @@ android {
 }
 
 
+protobuf {
+    protoc { artifact = 'com.google.protobuf:protoc:3.7.1' }
+    plugins {
+        javalite { artifact = "com.google.protobuf:protoc-gen-javalite:3.0.0" }
+        grpc {
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.21.0' // CURRENT_GRPC_VERSION
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.plugins {
+                javalite {}
+                grpc { // Options added to --grpc_out
+                    option 'lite'
+                }
+            }
+        }
+    }
+}
 
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.android.support:leanback-v17:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
 
 
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    // You need to build grpc-java to obtain these libraries below.
+    implementation 'io.grpc:grpc-okhttp:1.21.0' // CURRENT_GRPC_VERSION
+    implementation 'io.grpc:grpc-protobuf-lite:1.21.0' // CURRENT_GRPC_VERSION
+    implementation 'io.grpc:grpc-stub:1.21.0' // CURRENT_GRPC_VERSION
+    implementation 'javax.annotation:javax.annotation-api:1.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+
 
     // json pareser lib
     implementation 'com.github.amirdew:JSON:v1.0.0'
@@ -84,4 +116,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.8.0'
 
 //    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
