--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,32 +14,46 @@
 
     <application
         android:allowBackup="true"
+        android:banner="@drawable/cd_banner"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:banner="@drawable/cd_banner"
-        android:theme="@style/AppTheme">
-        <activity android:name=".CDESearchActivity">
+        android:supportsRtl="true">
+
+        <activity android:name=".SearchActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/AppActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
 
+        </activity>
 
+
+<!--        <activity android:name=".CDESearchActivity">-->
 <!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.VIEW" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
-<!--                <category android:name="android.intent.category.BROWSABLE" />-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <data-->
-<!--                    android:host="*"-->
-<!--                    android:pathPattern=".*"-->
-<!--                    android:scheme="cwsearch" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--                <category android:name="android.intent.category.LEANBACK_LAUNCHER" />-->
 <!--            </intent-filter>-->
 
+<!--            &lt;!&ndash; <intent-filter> &ndash;&gt;-->
+<!--            &lt;!&ndash; <action android:name="android.intent.action.VIEW" /> &ndash;&gt;-->
+<!--            &lt;!&ndash; <category android:name="android.intent.category.DEFAULT" /> &ndash;&gt;-->
+<!--            &lt;!&ndash; <category android:name="android.intent.category.BROWSABLE" /> &ndash;&gt;-->
 
-        </activity>
+
+<!--            &lt;!&ndash; <data &ndash;&gt;-->
+<!--            &lt;!&ndash; android:host="*" &ndash;&gt;-->
+<!--            &lt;!&ndash; android:pathPattern=".*" &ndash;&gt;-->
+<!--            &lt;!&ndash; android:scheme="cwsearch" /> &ndash;&gt;-->
+<!--            &lt;!&ndash; </intent-filter> &ndash;&gt;-->
+
+<!--        </activity>-->
+
+
     </application>
 
 </manifest>
