--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.10"
     }
 }
 
