--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,4 +119,7 @@ dependencies {
 
 //    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
+
 }
