--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cloudwalker.search"
-    android:sharedUserId="android.uid.system">
+    package="com.cloudwalker.search">
+<!--    android:sharedUserId="android.uid.system">-->
 
     <uses-feature
         android:name="android.software.leanback"
@@ -22,9 +22,11 @@
 
         <activity android:name=".SearchActivity"
             android:screenOrientation="landscape"
+            android:launchMode="singleTop"
             android:theme="@style/AppActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
