--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
+apply plugin: 'com.google.gms.google-services'
 
 
 android {
@@ -20,7 +21,7 @@ android {
     }
 
 
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "tv.cloudwalker.search"
@@ -120,6 +121,6 @@ dependencies {
 //    implementation 'com.github.bumptech.glide:glide:4.10.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
-    implementation 'com.crowdfire.cfalertdialog:cfalertdialog:1.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
 }
