--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "com.google.protobuf:protobuf-gradle-plugin:0.8.10"
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
